--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
 
   <body>
+    
 
                          <!-- HEADER -->
 
@@ -18,9 +19,9 @@
 </div>
 
 <nav class="menu">
-  <span><a href="#">Mission</a></span>
-  <span><a href="#">Featured Tea</a></span>
-  <span><a href="#">Locations</a></span>
+  <span><a href="#mission">Mission</a></span>
+  <span><a href="#tea">Featured Tea</a></span>
+  <span><a href="#locations">Locations</a></span>
 </nav>
 
 </header>
@@ -33,7 +34,7 @@
 
   <div class="our-mission">
     <span>
-      <h2>Our Mission</h2>
+      <h2 id="mission">Our Mission</h2>
       <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
    </span>
   </div>
@@ -43,7 +44,7 @@
 <div class="tea">
 
   <div class="header-tea">
-    <h2>Tea of the Month</h2>
+    <h2 id="tea">Tea of the Month</h2>
     <h4>What's Steeping at The Tea Cozy?</h4>
   </div>
 
@@ -76,7 +77,7 @@
 
 <div class="locations">
 
-  <h2>Locations</h2>
+  <h2 id="locations">Locations</h2>
 
 <section>
   <div class="down">
